fix: fix GalleryModal height and button position on mobile device

--- a/components/landingPage/galleryModal/galleryModal.module.scss
+++ b/components/landingPage/galleryModal/galleryModal.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
 }
 
