--- a/components/landingPage/galleryModalCarousel/galleryModalCarousel.module.scss
+++ b/components/landingPage/galleryModalCarousel/galleryModalCarousel.module.scss
@@ -101,7 +101,15 @@
     border: 2px solid #4B4A4B;
 }
 
-.carouselSlide>button {
+.imageWrapper {
+    position: relative;
+    display: inline-block;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
+}
+
+.imageWrapper>button {
     position: absolute;
     right: 8px;
     bottom: 34px;
